[package]
name = "hangar"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
criterion = "0.5.1"
polars = { version = "0.45.0", features = ["lazy", "csv", "dtype-struct", "dtype-date", "strings", "concat_str", "timezones", "serde"] }

[[bench]]
name = "data"
harness = false

#[profile.release]
#strip = true
#lto = false
#      When I tried LTO to reduce binary size, these were the results:
#      false (default)    44M binary, 1m 05s compile
#      "thin"             43M binary, 1m 03s compile
#      true               34M binary, 4m 31s compile
